--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300;400;500;600;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@layer base{
+  body {
+    @apply font-primary
+  }
+
+
+
+  .form-style {
+    @apply form-control block w-full px-3 py-1.5 text-base font-normal 
+    text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300
+      rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white 
+    focus:border-blue-600 focus:outline-none
+  }
+
+
+
 }
